tests/sksl/errors/OverflowParamArraySize.glsl
### Compilation failed:

error: 1: integer is too large: 4294967296
void fn(int arr[4294967296]);
                ^^^^^^^^^^
error: 1: array size must be positive
void fn(int arr[4294967296]);
                ^^^^^^^^^^
2 errors
